--- a/css/pages/careers/section-4.css
+++ b/css/pages/careers/section-4.css
@@ -123,7 +123,7 @@
 }
 
 .careers .section-4 .ui.segment .ui.header.header-2 {
-  padding-bottom: 0;
+  padding-bottom: 1.6rem;
   margin-bottom: 0;
 }
 
