--- a/css/pages/contact/section-5.css
+++ b/css/pages/contact/section-5.css
@@ -1,6 +1,7 @@
 .contact .section-5 {
   background-color: rgb(244, 247, 249);
   padding-bottom: 2rem;
+  padding-top: 2rem;
 }
 
 .contact .section-5 .ui.header.header-2 {
