--- a/css/pages/home/section-4.css
+++ b/css/pages/home/section-4.css
@@ -1,13 +1,28 @@
+.home .section-4 {
+  background-color: rgb(255, 255, 255);
+  padding-bottom: 4rem;
+}
+
+@media (min-width: 1000px) {
+  .home .section-4 {
+    padding-bottom: 6rem;
+  }
+}
+
+.home .section-4 .column {
+  padding: 0 1rem;
+}
+
 .home .section-4 .section-4-item-1-1 {
-  color: rgb(89, 90, 110);
-  font-family: "merriweatherregular", serif;
-  font-size: 1.4rem;
   margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 1rem;
   text-transform: capitalize;
   letter-spacing: 1px;
+  color: rgb(89, 90, 110);
+  font-family: "merriweatherregular", serif;
+  font-size: 1.4rem;
 }
 
 @media (min-width: 600px) {
@@ -22,22 +37,36 @@
   }
 }
 
-.home .section-4 {
-  background-color: rgb(255, 255, 255);
+.home .section-4 .section-4-item-1-3 {
+  text-align: center;
+  line-height: 0;
+  border: 1px rgb(219, 219, 219) solid;
+  border-radius: .3rem;
+  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1rem;
+}
+
+.home .section-4 .section-4-item-1-3 h3 {
+  letter-spacing: .05rem;
+  color: rgb(108, 32, 97);
+  font-size: 1rem;
+  margin-top: 0;
+  padding-top: .5rem;
+  text-transform: uppercase;
 }
 
 .home .section-4 .section-4-item-1 {
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 3.3rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-bottom: 2rem;
   padding-top: 2rem;
 }
 
 @media (min-width: 600px) {
   .home .section-4 .section-4-item-1 {
-    padding-bottom: 4rem;
+    padding-bottom: 3.3rem;
     padding-top: 4rem;
   }
 }
@@ -45,14 +74,12 @@
 @media (min-width: 1000px) {
   .home .section-4 .section-4-item-1 {
     padding-top: 5rem;
-    padding-bottom: 6rem;
   }
 }
 
 @media (min-width: 1200px) {
   .home .section-4 .section-4-item-1 {
     padding-top: 4.5rem;
-    padding-bottom: 7rem;
   }
 }
 
