--- a/css/pages/services/section-5.css
+++ b/css/pages/services/section-5.css
@@ -16,7 +16,6 @@
   width: 90%;
   max-width: 350px;
   opacity: 0.3;
-  margin-bottom: 2rem;
 }
 
 @media (min-width: 500px) {
@@ -59,6 +58,7 @@
 .services .section-5 .column {
   margin-left: auto;
   margin-right: auto;
+  overflow: hidden;
 }
 
 .services .section-5 .column p {
@@ -85,15 +85,14 @@
 }
 
 .services .section-5 .ui.floated.image, .services .section-5 .ui.floated.images {
-  margin-bottom: 2em;
   width: 100%;
 }
 
-/*@media (min-width: 1000px) {
+@media (min-width: 800px) {
   .services .section-5 .ui.floated.image, .services .section-5 .ui.floated.images {
-    max-width: 550px;
+    max-width: 400px;
   }
-}*/
+}
 
 .services .section-5 .ui.segment {
   background: none;
@@ -101,9 +100,9 @@
   border: none;
   text-align: left;
   margin-top: 0;
-  padding-top: 0;
   margin-left: 1rem;
   margin-right: 1rem;
+  padding-top: 1rem;
 }
 
 @media (min-width: 500px) {
@@ -113,12 +112,12 @@
   }
 }
 
-@media (min-width: 800px) {
+/*@media (min-width: 800px) {
   .services .section-5 .ui.segment {
     margin-left: 5rem;
     margin-right: 5rem;
   }
-}
+}*/
 
 .services .section-5 .ui.segment .ui.header {
   padding-bottom: .8rem;
@@ -156,7 +155,7 @@
 
 @media (min-width: 1000px) {
   .services .section-5 .ui.segment .ui.header .sub.header {
-    padding-top: .3rem;
+    padding-top: .4rem;
   }
 }
 
