--- a/css/units/header.css
+++ b/css/units/header.css
@@ -37,7 +37,7 @@
   border-radius: 0;
 }
 
-.second-menu,, .section-4 {
+.second-menu, .section-4 {
   text-align: center;
 }
 
@@ -174,7 +174,7 @@ i.icon.chevron.down>i.icon {
 }
 
 .first-menu span, .first-menu span {
-  color: rgba(255, 255, 255, .6);
+  color: rgb(255, 255, 255);
   cursor: pointer;
   font-family: "OpenSans",sans-serif;
   font-size: .8rem;
@@ -238,6 +238,10 @@ i.icon.chevron.down>i.icon {
   padding-bottom: 1rem !important;
   padding-top: 1rem !important;
   text-transform: uppercase;
+  background-color: #2185D0; 
+  color: #FFF; 
+  text-shadow: none; 
+  background-image: none;
 }
 
 .second-menu-item-3 .second-menu-btn:hover {
@@ -411,9 +415,9 @@ i.icon.chevron.down>i.icon {
     width: 20.33% !important;
   }
 
-  .second-menu-item-2 {
+/*  .second-menu-item-2 {
     width: 53.33% !important;
-  }
+  }*/
 
   .second-menu-item-3 {
     width: 25.33% !important;
@@ -425,9 +429,9 @@ i.icon.chevron.down>i.icon {
     width: 20.33% !important;
   }
 
-  .second-menu-item-2 {
+/*  .second-menu-item-2 {
     width: 55.33% !important;
-  }
+  }*/
 
   .second-menu-item-3 {
     width: 24.33% !important;
@@ -440,11 +444,11 @@ i.icon.chevron.down>i.icon {
   }
 
   .second-menu-item-2 {
-    width: 57.33% !important;
+    width: 52.33% !important;
   }
 
   .second-menu-item-3 {
-    width: 22.33% !important;
+    width: 27.33% !important;
   }
 }
 
